--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,5 +1,5 @@
   .hero-container {
-    background: url('/public/one.jpg') center center/cover no-repeat; 
+    background: url('/public/oneee.jpg') center center/cover no-repeat; 
     //background: slategray;
     height: 100vh;
     width: 100%;
