work on signup display

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -3,18 +3,23 @@
     background: transparent;
     height: 80px;
     display: flex;
-    /* justify-content: center; */
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
+    color: black;
   }
   
   .navbar-container {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    margin-left: 1200px
+    flex-direction: column; */
+    margin-left: 1100px
   }
   
   .header {
+    color: black;
     text-align: center;
+    flex-direction: row;
     margin-left: 100px
   }
   .header img {
