--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -23,10 +23,10 @@
     transform: translateY(-2px);
   }
   a.instagram {
-    color: black;
+    color: magenta;
   }
   .website-rights {
-    color: black;
+    color: white;
     padding-top: 8px;
     display: center;
   }
