--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,14 +1,14 @@
   .hero-container {
-    background: url('/public/oneee.jpg') center center/cover no-repeat; 
-    //background: slategray;
-    height: 100vh;
+    //background: url('/public/oneee.jpg') center center/cover no-repeat; 
+    background: transparent;
+    /* height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-    object-fit: contain;
+    object-fit: contain; */
   }
   
   .content {
